assets/css/style.css
html, body{
    background: url(https://yanananan.github.io/Basic-Portfolio/assets/images/background.png);
    width: 100%;
}

.Banner{
    height: 90px;
    border-bottom: #cccccc solid 2px;
    width: 100%;
    background-color: white;
}

.Header{
    height: 90px;
    width: 960px;
    margin: auto;
}

.HeaderLeft{
    float: left;
    height: 90px;
    background-color: #4aaaa5;
    color: white;
    vertical-align: middle;
}

.HeaderText{
    font-family: 'Georgia', Times, Times New Roman, serif;
    font-size: 38px;
    margin: 25px 35px;
    font-weight: bold;
    /* display: inline-block;
    vertical-align: middle; */
    /* vertical align doesn't seem to vertically center the text in the blue-green section so i resorted to setting a margin instead */
}

.HeaderRight{
    float: right;
    text-align: center;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    /* not sure the table in this section is automatically vertically centered, but i'm not gonna complain */
}

a{
    color: #777777;
    text-decoration: none;
}

a:hover {
    font-weight: bold;
}

.table{
    height: 20px;
    padding: 32px 0px;
}

.About, .Portfolio{
    width: 100px;
}

.Contact{
    width: 70px;
    text-align: right;
}

.Portfolio{
    border-left: solid 1px #f3f3f3;
    border-right: solid 1px #f3f3f3;
}

/* Above is all the styling for the Banner, which is reused for all three pages. */

.content{
    width: 960px;
    border: solid #dddddd 1px;
    margin: auto;
    margin-top: 37px;
    background-color: white;
}

.ContentTitle{
    border-bottom: solid #dddddd;
    color: #4aaaa5;
    font-family: 'Georgia', Times, Times New Roman, serif;
    font-size: 38px;
    margin: 35px 35px 30px 35px;
    padding: 0px 0px 30px 0px;
    font-weight: bold;
}

#profilepic{
    float: left;
    width: 150px;
    height: 150px;
    margin: 10px 25px 25px 35px;
}
p, input, .TextBoxTitle, #SubmitButton{
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    line-height: 200%;
    color: #777777;

}
p{
    font-size: 18px;
    margin: 0px 35px 35px 35px;
}

.TextBoxTitle{
    font-size: 15px;
    margin: 0px 35px 0px 35px;
}

.TextBox{
    width: 865px;
    padding: 5px 10px 5px 10px;
    margin: 0px 35px 10px 35px;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-size: 13px;
}

.Message{
    height: 200px;
}

#SubmitButton{
    background-color: #4aaaa5;
    color: white;
    width: 120px;
    height: 40px;
    border: solid transparent;
    margin: 15px 0px 35px 35px;
    font-size: 18px;
}

.PortfolioContent{
    height: 900px;
}

.PortfolioTable{
    width: 700px;
    margin: 0px 35px 35px 35px;
}

#Hangman, #RPG, #Trivia, #Rutger, #RPS{
    /* background-color: green; */
    background-image: url(https://yanananan.github.io/Basic-Portfolio/assets/images/logopic.jpg);
    background-size: 273px 205px;
    background-repeat: no-repeat;
    float: left;
    margin: 0px 40px 55px 0px;
}

#RPS{
    /* clear: both; */
}

.ImageText{
    width: 273px;
    height: 40px;
    color: white;
    background-color: #4aaaa5;
    text-align: center;
    font-family: 'Georgia', Times, Times New Roman, serif;
    margin: 130px 0px 8px 0px;
    padding-top: 20px;
    font-size: 20px;
}

.copyrightbanner{
    height: 55px;
    border-top: #4aaaa5 7px solid;
    width: 100%;
    background-color:#666666;
    text-align: center;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-size: small;
    position: fixed;
    bottom: 0px;
}
.copyright{
    margin: 30px 0px 0px 0px;
    color: #cccccc;
}

